# chip8-emu

./: Cargo.toml  rustfmt.toml
src/: cpu.rs  init.rs  main.rs  opcodes.rs  state.rs  ui.rs
